ts-plugins/dashboard/template/dashboard/css/style.css
html,
body,
#wrapper{
    height: 100%;
}

#page-wrapper{
    min-height: 100% !important;
}

/**
 * Боковое меню для админа
 */
.nav-admin li:nth-child(1){
    margin-top:40px; 
    border-top: 1px solid #e7e7e7;
}
.nav-admin a{
    color: #b73333;
}

.nav-admin a:hover, .nav-admin a:focus {
    color: #b74444;
}

.sidebar ul li a.active {
    border-left:3px solid;
}

.panel-collapsable .panel-heading .panel-title a,
.panel-collapsable .panel-heading .panel-title a:hover,
.panel-collapsable .panel-heading .panel-title a:focus{
	text-decoration: none;
}

span.counter{
	float:right;
	padding: 0px 8px;
}

.row.awesome-icons-list {
    max-height: 250px;
    margin: 20px 0;
    padding: 5px;
    overflow-y: scroll;
    border: 1px solid #cecece;
    border-radius: 3px;
}

.row.awesome-icons-list .awesome-icon {
    cursor: pointer;
}

.row.awesome-icons-list .awesome-icon:hover {
    background: rgba(0,0,0,0.15);
    color: #666;
}

.input-group span.input-group-addon.input-addon-xs {
    min-width: 80px;
    text-align: left;
}

.input-group span.input-group-addon.input-addon-sm {
    min-width: 80px;
    text-align: left;
}

.input-group span.input-group-addon.input-addon-md {
    min-width: 120px;
    text-align: left;
}

.input-group span.input-group-addon.input-addon-lg {
    min-width: 150px;
    text-align: left;
}

.input-group span.input-group-addon.input-addon-xl {
    min-width: 200px;
    text-align: left;
}

/**
 * Сворачивание бокового меню
 */
ul.nav li#collapse-sidebar {
    text-align: center;
    cursor: pointer;
    display: none;
}

@media(min-width:768px) {
    ul.nav li#collapse-sidebar i:before{
        content:"\f104";
    }

    ul.nav li#collapse-sidebar {
        display: block;
        padding: 2px 0px;
    }

    #sidebar.collapse-width ul.nav li#collapse-sidebar i:before{
        content:"\f105";
    }

    #sidebar.collapse-width ul.nav li#collapse-sidebar {
        text-align: right; 
        padding: 2px 15px 2px 0px;
    }

    #sidebar.collapse-width ul.nav li a {
        direction: rtl;
        text-align: right;
    }

    #sidebar.collapse-width ul.nav li a i {
        padding: 0 2px 0 30px;
    }

    #sidebar.collapse-width {
        margin-left: -200px !important;
    }

    #page-wrapper.full-width {
        margin-left: 50px !important;
    }
}

